# hicko

./: BUILD_AND_TEST_REPORT.md  Cargo.toml  DELIVERY_INTEGRATION_COMPLETE.md  DELIVERY_SUMMARY.md  DEVELOPER_QUICK_GUIDE.md  DOCUMENTATION_INDEX.md  FILE_INVENTORY.md  FINAL_DELIVERY_REPORT.md  FINAL_INTEGRATION_DELIVERY.md  FRONTEND_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  INTEGRATION_COMPLETE_OVERVIEW.md  INTEGRATION_DOCUMENTATION_INDEX.md  INTEGRATION_FINAL_SUMMARY.txt  INTEGRATION_QUICK_REFERENCE.txt  INTEGRATION_READY_SUMMARY.txt  INTEGRATION_SETUP_COMPLETE.md  INTEGRATION_SYSTEM_OVERVIEW.txt  INTEGRATION_TROUBLESHOOTING.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.txt  QUICK_REFERENCE.md  READY_TO_TEST.md  SCRIPTS_CONSOLIDATED.md  START_HERE.txt  START_HERE_INTEGRATION.txt  START_INTEGRATION.md  check_backend_connectivity.sh  check_system.sh  integrate.sh  run_complete_integration.sh  run_full_integration.sh  run_quick_integration.sh  start_api.sh  start_integration_test.sh  stop-services.sh  verify_production_readiness.sh  verify_production_ready.sh
.github/workflows/: ci.yml
conformance/dns-test/src/: client.rs  name_server.rs  record.rs
crates/control_api/: Cargo.toml
crates/control_api/src/: main.rs
crates/geodns/: Cargo.toml
crates/geodns/src/: lib.rs
crates/resolver/src/: name_server.rs
web/ui/: SETUP.md  setup.sh  start_ui.sh  tailwind.config.cjs
web/ui/src/: api.js  main.jsx
web/ui/src/components/: BulkImport.jsx  Layout.jsx  Modal.jsx  (+2 more)
web/ui/tests/: e2e.bulk.spec.js  e2e.full.spec.js
(+12 files in other folders)
