[package]
name = "control_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
env_logger = "0.10"
log = "0.4"
prometheus = "0.14"
actix-web-prom = "0.6"
once_cell = { workspace = true }
uuid = { version = "0.8", features = ["v4"] }
tokio-postgres = { version = "0.7" }
serde_qs = "0.7"
jsonwebtoken = "8"
argon2 = "0.4"
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
anyhow = "1"

# Local workspace crates (integrate DNS core)
hickory-server = { path = "../server", default-features = false }
hickory-resolver = { path = "../resolver", optional = true }
geodns = { path = "../geodns" }

[profile.release]
opt-level = 3
